# TinyWebServer

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  README.md  staticfileserver.cpp
examples/httpstaticfile/: httpstaticfile.cpp
examples/httpstaticfile/html/: about.html  codes.html  contact.html  gallery.html  index.html
examples/httpstaticfile/html/css/: lato.css
include/TinyWebServer/: address.h  bytearray.h  configurator.h  configvar.h  endianness.h  fdmanager.h  fiber.h  hook.h  iomanager.h  log.h  macro.h  mutex.h  noncopyable.h  scheduler.h  socket.h  stream.h  tcpserver.h  thread.h  timer.h  util.h
include/TinyWebServer/db/: db.h  mysql.h
include/TinyWebServer/http/: http.h  httpconnection.h  httpparser.h  httpserver.h  httpsession.h  servlet.h
include/TinyWebServer/log/: logappender.h  logevent.h  logformater.h  logger.h  loglevel.h
include/TinyWebServer/streams/: socketstream.h
latex/: annotated.tex  classEchoServer.tex  classEchoServer__coll__graph.md5  classEchoServer__inherit__graph.md5  classHttpStaticFile.tex  classPerson.tex  classWebSrv_1_1Address.tex  classWebSrv_1_1Address__inherit__graph.md5  classWebSrv_1_1AsyncAppender.tex  classWebSrv_1_1AsyncAppender__coll__graph.md5  classWebSrv_1_1AsyncAppender__inherit__graph.md5  classWebSrv_1_1ByteArray.tex  classWebSrv_1_1ConfigVar.tex  classWebSrv_1_1ConfigVarBase.tex  classWebSrv_1_1ConfigVarBase__inherit__graph.md5  classWebSrv_1_1ConfigVar__coll__graph.md5  classWebSrv_1_1Configurator.tex  classWebSrv_1_1ConsoleAppender.tex  classWebSrv_1_1ConsoleAppender__coll__graph.md5  classWebSrv_1_1ConsoleAppender__inherit__graph.md5  classWebSrv_1_1DailyRollingFileAppender.tex  classWebSrv_1_1DailyRollingFileAppender__coll__graph.md5  classWebSrv_1_1DailyRollingFileAppender__inherit__graph.md5  classWebSrv_1_1ElapseFormatItem.tex  classWebSrv_1_1ElapseFormatItem__coll__graph.md5  classWebSrv_1_1FdCtx.tex  classWebSrv_1_1FdCtx__coll__graph.md5  classWebSrv_1_1FdManager.tex  classWebSrv_1_1Fiber.tex  classWebSrv_1_1FiberIdFormatItem.tex  classWebSrv_1_1FiberIdFormatItem__inherit__graph.md5  classWebSrv_1_1Fiber__coll__graph.md5  classWebSrv_1_1FileAppender.tex  classWebSrv_1_1FileAppender__coll__graph.md5  classWebSrv_1_1FileAppender__inherit__graph.md5  classWebSrv_1_1FileNameFormatItem.tex  classWebSrv_1_1FileNameFormatItem__coll__graph.md5  classWebSrv_1_1FileSystemUtil.tex  classWebSrv_1_1IDB.tex  classWebSrv_1_1IDB__coll__graph.md5  (+155 more)
src/: CMakeLists.txt  address.cpp  bytearray.cpp  configurator.cpp  fdmanager.cpp  fiber.cpp  hook.cpp  iomanager.cpp  scheduler.cpp  socket.cpp  stream.cpp  tcpserver.cpp  thread.cpp  timer.cpp  util.cpp
src/db/: mysql.cpp
src/http/: http.cpp  httpconnection.cpp  httpparser.cpp  httpserver.cpp  httpsession.cpp  servlet.cpp
src/log/: logappender.cpp  logevent.cpp  logformater.cpp  logger.cpp  loglevel.cpp
src/streams/: socketstream.cpp
tests/: CMakeLists.txt  test_address.cpp  test_bytearray.cpp  test_fiber.cpp  test_http.cpp  test_httpconnection.cpp  test_httpparse.cpp  test_httpserver.cpp  test_iomanager.cpp  test_mysql.cpp  test_scheduler.cpp  test_socket.cpp  test_tcpserver.cpp
tests/configurator_test/: configurator_test.cpp  test.yaml  test2.yaml
tests/log_test/: log_test.cpp  log_test.yaml
